# recipe-scan-tool

./: .gitignore  .gitmodules  DATABASE_SCHEMA.md  README.md  diagnose_border_issue.py  extract_pdf_pages.py  pyproject.toml  run_extract_notecards.py  run_web_gui.py  update_venv.py
notecard_extractor/: __init__.py  border_removers.py  config.py  database.py  image_processing.py  main.py  pdf_extractor.py  web_gui.py
notecard_extractor/api/: __init__.py  responses.py  routes.py
notecard_extractor/api/handlers/: __init__.py  images.py  recipes.py  tags.py
notecard_extractor/services/: __init__.py  image_service.py  pdf_service.py  recipe_service.py
notecard_extractor/static/css/: main.css
notecard_extractor/static/js/: imageModal.js  main.js
notecard_extractor/templates/: index.html
notecard_extractor/utils/: __init__.py  cache_utils.py  db_utils.py  image_utils.py  pdf_utils.py
