[tool.poetry]
name = "notecard-extractor"
version = "0.1.0"
description = "A tool to extract and crop notecard images from PDF files"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13
typer = "*"

[tool.poetry.scripts]
extract-notecards = "notecard_extractor.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
