[project]
name = "notecard-extractor"
version = "0.1.0"
description = "A tool to extract and crop notecard images from PDF files"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf",
    "pillow",
    "typer",
    "flask",
]

[project.scripts]
extract-notecards = "notecard_extractor.main:app"
white-border-remover = "notecard_extractor.main:white_border_remover_app"
grey-border-remover = "notecard_extractor.main:grey_border_remover_app"
web-gui = "notecard_extractor.web_gui:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
